--- a/js01.html
+++ b/js01.html
@@ -12,5 +12,6 @@
     <p>Il y a une "alert" sur cette page écrite en JavaScript.</p>
     <p>Ouvrir la page avec un navigateur pour la voir.</p>
     <p>Je ne sais pas écrire "alert" en Français et je ne sais pas si ce mot est feminin ou masculin.</p>
+    <p>Ah! En Français, 'alerte', mot feminin.</p>
   </body>
 </html>
