mettre titre en français

--- a/js01.html
+++ b/js01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Un alert avec JavaScript</title>
+    <title>Une alerte avec JavaScript</title>
     <meta charset="utf-8">
     <script>
       alert("hello, le monde!");
