change svg size & style paragraph in head

--- a/X#5b9.html
+++ b/X#5b9.html
@@ -7,17 +7,22 @@
   <title>explore sharp 5 flat nine chords</title>
   <meta name="description" content=" ">
   <meta name="morton" content=" ">
-
   <link rel="stylesheet" href=" ">
-
+  <style type="text/css">
+    p {
+      color: #2c302d;
+      width: 30em;
+    }
+    </style>
 </head>
 
-<body>
+<body> <!--la page de musique prenait beaucoup trop de place, j'ai divisé par deux width et height -->
+    <h1>explorer les accords X#5b9</h1>
     <img <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-    <svg width="296.686mm" height="209.55mm"
+    <svg width="222mm" height="157mm"
      viewBox="0 0 841 594"
      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  version="1.2" baseProfile="tiny">
-    <title>01 - Full score - Untitled Project 1 - 012</title>
+    <title>sharp five, flat nine chord exploration</title>
     <desc>Dorico</desc>
     <defs>
     </defs>
@@ -1251,10 +1256,9 @@
     >
     </g>
     </g>
-    </svg>
+    alt="svg graphic of sharp5 flat9 chord"</svg>
     
-         alt="svg graphic of sharp5 flat9 chord"
-         height="100"
+    <p>Je pense que mon analyse du deuxième accord est discutable. C'est peut-être bien plutôt un C6/9onG. Et pareil pour la quatrième accord qui serait un F6/9onC.</p>
   <script src=" "></script>
 </body>
 </html>
