add h2 tag to make sleeping cat bigger

--- a/mon chat.html
+++ b/mon chat.html
@@ -22,10 +22,10 @@
 
 <p>coucou ici morton, voici le mien :</p>
 <div style="text-align: center;">
-    <p><pre><code>      |\      _,,,---,,_
+    <h2><pre><code>      |\      _,,,---,,_
     ZZZzz /,`.-'`'    -.  ;-;;,_
          |,4-  ) )-,_. ,\ (  `'-'
-        '---''(_/--'  `-'\_)  </code></pre></p>
+        '---''(_/--'  `-'\_)  </code></pre></h2>
 </div> 
 
 
