ajouter ascii art maceo

--- a/maceo_learns_to_code.html
+++ b/maceo_learns_to_code.html
@@ -13,5 +13,12 @@
         <h3>le tag h3 est encore plus petit que les tags h1 ou h2.</h3>
         <p>And what about the h4 tag?</p>
         <h4>c'est moi le h4, et alors!</h4>
+        <h2><pre><code>
+             _____ _____    ____  ____  ____  
+            /     \\__  \ _/ ___\/ __ \/  _ \ 
+           |  Y Y  \/ __ \\  \__\  ___(  <_> )
+           |__|_|  (____  /\___  >___  >____/ 
+                 \/     \/     \/    \/       
+           </code></pre></h2>
     </body>
 </html>
