--- a/mon chat.html
+++ b/mon chat.html
@@ -28,8 +28,10 @@
         '---''(_/--'  `-'\_)  </code></pre></h2>
 </div>
 <!-- la balise div ne fait rien mais elle permet le rajout du code qui s'applique sur ce qu'elle contient  -->
-<!-- le code 'style="text-align: center" a mis mon chat au centre de la ligne où elle dort' -->
+<!-- le code style="text-align: center" a mis mon chat au centre de la ligne où elle dort -->
 <p>Ce chat qui dort est dessiné par Felix Lee. Je l'ai copié de cette page: <a href="https://www.asciiart.eu/animals/cats">ASCII art archive</a></p>
+<!-- la balise <a href=" "></a> fait du texte qu'on met entre les balises du hypertext. On peut cliquer dessus et ouvrir une autre page web dont l'adresse est entre les guillemets. -->
+<!-- Le hypertext vient des origines du web. HTML est un acronym pour HyperText Markup Language.  -->
             
             
 
