--- a/myranda.html
+++ b/myranda.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h2><pre><code>
+    <h2><code>
          ___           ___           ___           ___           ___           ___           ___     
         /\__\         |\__\         /\  \         /\  \         /\__\         /\  \         /\  \    
        /::|  |        |:|  |       /::\  \       /::\  \       /::|  |       /::\  \       /::\  \   
@@ -19,6 +19,6 @@
         \/__/                       \|__|         \/__/         \/__/         ~~            \/__/           
     
     
-    </code></pre></h2>
+    </code></h2>
   </body>
 </html>
