change font to Lato

--- a/hover-active-button.html
+++ b/hover-active-button.html
@@ -1,10 +1,17 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
     <head>
         <meta charset="utf-8">
         <title>animation bouton</title>
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,400" type=text/css rel="stylesheet">
+        <style type="text/css">
+            body {
+                font-family: Lato, sans-serif;
+            }
+        </style>
     </head>
     <body>
-
+        <h1>This Button Does Nothing</h1>
+        <button class="btn">Click Me</button>
     </body>  
 </html>
