morton rajouter boutons, fond jaune, enlever contour

--- a/hover-active-button.html
+++ b/hover-active-button.html
@@ -5,13 +5,22 @@
         <title>animation bouton</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400" type=text/css rel="stylesheet">
         <style type="text/css">
+           
+            .btn {
+                outline: none;
+                border: none;
+                cursor: pointer;
+            } 
             body {
                 font-family: Lato, sans-serif;
+                background-color: yellow;
             }
         </style>
     </head>
     <body>
         <h1>This Button Does Nothing</h1>
-        <button class="btn">Click Me</button>
+        <button class="btn">Click Me!</button>
+        <h2>Ce bouton ne fait rien non plus</h2>
+        <button class="btn">Me Cliquer ?</button>
     </body>  
 </html>
