--- a/hover-active-button.html
+++ b/hover-active-button.html
@@ -10,7 +10,27 @@
                 outline: none;
                 border: none;
                 cursor: pointer;
+                display: block;
+                position: relative;
+                background-color: #fcad26;
+                font-size: 16px;
+                font-weight: 300px;
+                color: white;
+                text-transform: uppercase;
+                letter-spacing: 2px;
+                padding: 25px 80px;
+                margin:  0 auto;
+                border-radius: 20px;
+                box-shadow: 0 6px #ca8d24;
             } 
+            .btn:hover {
+                box-shadow: 0 4px #ca8d24;
+                top: 2px;
+            }
+            .btn:active {
+                top: 4px;
+                box-shadow: 0 0;
+            }
             body {
                 font-family: Lato, sans-serif;
                 background-color: yellow;
@@ -21,6 +41,6 @@
         <h1>This Button Does Nothing</h1>
         <button class="btn">Click Me!</button>
         <h2>Ce bouton ne fait rien non plus</h2>
-        <button class="btn">Me Cliquer ?</button>
+        <button class="btnFr">Me Cliquer ?</button>
     </body>  
 </html>
