--- a/hover-active-button.html
+++ b/hover-active-button.html
@@ -29,7 +29,7 @@
             }
             .btn:active {
                 top: 4px;
-                box-shadow: 0 0;
+                box-shadow: none;
             }
             body {
                 font-family: Lato, sans-serif;
