increase horizontal translation and shadow

--- a/hover-active-button.html
+++ b/hover-active-button.html
@@ -21,14 +21,16 @@
                 padding: 25px 80px;
                 margin:  0 auto;
                 border-radius: 20px;
-                box-shadow: 0 6px #ca8d24;
+                box-shadow: 3px 6px #ca8d24;
             } 
             .btn:hover {
-                box-shadow: 0 4px #ca8d24;
+                box-shadow: 2px 4px #ca8d24;
                 top: 2px;
+                left: 1px;
             }
             .btn:active {
                 top: 4px;
+                left:4px;
                 box-shadow: none;
             }
             body {
