troisième carré mystère

--- a/translations.html
+++ b/translations.html
@@ -17,6 +17,16 @@
             width: 100px;
             height: 100px;
         }
+        p.troisième {
+            background-color: thistle;
+            width: 100px;
+            height: 100px;
+        }
+        p.troisième:hover {
+            transform: rotate(15deg);
+            transform-origin: left bottom;
+            cursor: progress;
+        }
     </style>
 </head>
 <body>
@@ -26,4 +36,6 @@
     <p>À qui le tour de faire bouger le carré ci-dessous ?</p>
     <p>Où va-t-il aller?</p>
     <p class="seconde"></p>
+    <p>Et moi, je fais quoi quand on me met le pointeur dessus?</p>
+    <p class="troisième"></p>
 </body>
