mieux avec des h2

--- a/translations.html
+++ b/translations.html
@@ -33,9 +33,9 @@
     <h1>Le carré rouge bouge quand on clique dessus.</h1>
     <p>Et ça change de couleur en plus. Quand on arrête de cliquer, le carré revient où il était.</p>
     <p class="premier"></p>
-    <p>À qui le tour de faire bouger le carré ci-dessous ?</p>
+    <h2>À qui le tour de faire bouger le carré ci-dessous ?</h2>
     <p>Où va-t-il aller?</p>
     <p class="seconde"></p>
-    <p>Et moi, je fais quoi quand on me met le pointeur dessus?</p>
+    <h2>Et moi, je fais quoi quand on me met le pointeur dessus?</h2>
     <p class="troisième"></p>
 </body>
