--- a/translations.html
+++ b/translations.html
@@ -10,6 +10,7 @@
         p.premier:active {
             transform: translate(500px, 20px);
             background-color: rgb(255, 170, 170);
+            transition-duration: 2s;
             
         }
         p.seconde {
@@ -26,6 +27,7 @@
             transform: rotate(15deg);
             transform-origin: left bottom;
             cursor: progress;
+            transition-duration: 1s;
         }
     </style>
 </head>
