--- a/hover-active-button.html
+++ b/hover-active-button.html
@@ -44,6 +44,6 @@
         <button class="btn">Click Me!</button>
         <h2>Ce bouton ne fait rien non plus</h2>
         <button class="btnFr">Me Cliquer ?</button>
-        <p>Ce bouton est super moché comme ça. J'attends toujours que quelqu'un veuille bien le styler. Maceo ? Myranda ? Help me ?</p>
+        <p>Ce bouton est super moche comme ça. J'attends toujours que quelqu'un veuille bien le styler. Maceo ? Myranda ? Help me ?</p>
     </body>  
 </html>
