active devient cercle

--- a/translations.html
+++ b/translations.html
@@ -15,6 +15,7 @@
         p.premier:active {
             transform: translate(500px, 20px);
             background-color: #FFE9E0;
+            border-radius: 50%;
             transition-duration: 2s;
             
         }
