commentaire ralentir retour

--- a/translations.html
+++ b/translations.html
@@ -52,3 +52,4 @@
     <h2>Et moi, je fais quoi quand on me met le pointeur dessus?</h2>
     <p class="troisième">?</p>
 </body>
+<!-- comment ralentir le retour du carré quand on lache le click ? -->
