--- a/translations.html
+++ b/translations.html
@@ -23,6 +23,18 @@
             background-color: yellowgreen;
             width: 100px;
             height: 100px;
+            text-align: center;
+            line-height: 100px;
+            color: yellowgreen;
+            font-size: 2.3em;
+        }
+        p.seconde:active {
+        	background-color: #C61122;
+        	transform: translate(450px); 
+        	transition-duration: 3s;
+        	border-radius: 50%;
+        	color: #51FF24; 
+        	 
         }
         p.troisième {
             background-color: thistle;
@@ -48,8 +60,10 @@
     <p class="premier">!</p>
     <h2>À qui le tour de faire bouger le carré ci-dessous ?</h2>
     <p>Où va-t-il aller?</p>
-    <p class="seconde"></p>
+    <p class="seconde">oui</p>
     <h2>Et moi, je fais quoi quand on me met le pointeur dessus?</h2>
     <p class="troisième">?</p>
+    <p>hey</p>
+    <p class="premier">hey</p>
 </body>
 <!-- comment ralentir le retour du carré quand on lache le click ? -->
