--- a/je sais pas ce que je vais faire dessus.html
+++ b/je sais pas ce que je vais faire dessus.html
@@ -1,6 +1,14 @@
-<!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <title>cette page peut contenir n'importe quoi...</title>
-</head>
-<body>
+ <!DOCTYPE html>
+ <html lang="fr">
+  <head>
+   <title>cette page peut contenir n'importe quoi</title>
+   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="js/app.js"></script>
+  </head>
+  <body>
+  <p>je</p>
+
+  </body>
+ </html>
