--- a/javascript-playground.html
+++ b/javascript-playground.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="js/app.js"></script>
+    <style type="text/css">
+    	center {
+    		color: #BFEFED;
+    		font-size: 3em;
+    	}
+    	body {
+    		background-color: #FF9872;
+    	}
+    	.right-side-text { margin-left: 66%; }
+    	.aside { font-size: 1.2rem; background-color: #F1E2D1; padding: 15px;}
+    </style>
   </head>
   <body>
-
+	<center>
+	Jouer avec JavaScript c'est ici!
+	</center>
+	<div class="right-side-text">
+	<p class="aside">Il faut ouvrir le console (Cmd_Ctrl_J dans Chrome) pour voir les messages JavaScript.</p>
+	<p class="aside">
+		Le JavaScript pour cette page est dans le dossier "js" et le nom du fichier c'est "app.js". Le "path" c'est: "../code-fun/js/app.js".
+	</p>
+	</div>
   </body>
  </html>
