change font size and page spacing

--- a/javascript-playground.html
+++ b/javascript-playground.html
@@ -9,13 +9,13 @@
     <style type="text/css">
     	center {
     		color: #BFEFED;
-    		font-size: 3em;
+    		font-size: 3rem;
     	}
     	body {
     		background-color: #FF9872;
     	}
-    	.right-side-text { margin-left: 66%; }
-    	.aside { font-size: 1.2rem; background-color: #F1E2D1; padding: 15px;}
+    	.right-side-text { margin-left: 60vw; }
+    	.aside { font-size: 1.1rem; background-color: #F1E2D1; padding: 15px;}
     </style>
   </head>
   <body>
