répondre maceo c'est quoi un div?

--- a/boiler-plate.html
+++ b/boiler-plate.html
@@ -4,16 +4,17 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>boiler-plate html code</title>
+  <title>boilerplate html code</title>
 </head>
 <body>
   <h1>Comment commencer une nouvelle page html</h1>
-  <p>On pourrait simplement taper à main le code qu'on trouve en commun dans toutes les pages html. On peut coller une copie de cette code en copiant d'un fichier texte qu'on garde quelque part. Des texteurs, des logiciels de texte spécialisés pour écrire du html, peuvent avoir une fonction pour générer cette code.</p>
+  <p>On pourrait simplement taper à main le code qu'on trouve en commun dans toutes les pages html. On peut coller une copie de cette code en le copiant d'un fichier texte qu'on garde quelque part. Des texteurs, des logiciels de texte spécialisés pour écrire du html, peuvent avoir une fonction pour générer cette code.</p>
+  <h2>Raccourcis claviers pour générer 
   <ul>
     <li><i>BBEDit: <b>CtrlCmdN</b></i></li>
     <li><i>Visual Studio Code: <b>!tab</b></i></li>
   </ul>
-  <p>Voici le 'boilerplate' code que BBEdit génère: 
+  <h2>Voici le 'boilerplate' code que BBEdit génère: 
   <pre>
   	&lt!DOCTYPE html&gt
 	&lthtml lang="en"&gt
@@ -27,5 +28,6 @@
 	&lt/body&gt
 	&lt/html&gt
   </pre>
+  </h2>
 </body>
 </html>
