--- a/hover-active-button.html
+++ b/hover-active-button.html
@@ -33,6 +33,15 @@
                 left:4px;
                 box-shadow: none;
             }
+            .btnFr
+            {
+            	color: white;
+            	background-color: #005AFF;
+            	font-size: 20px;
+            	padding: 25px 80px;
+            	border-radius: 21px;
+            	
+            }
             body {
                 font-family: Lato, sans-serif;
                 background-color: yellow;
