pre a la place de code HTML5

--- a/myranda.html
+++ b/myranda.html
@@ -5,20 +5,20 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h2><code>
-         ___           ___           ___           ___           ___           ___           ___     
-        /\__\         |\__\         /\  \         /\  \         /\__\         /\  \         /\  \    
-       /::|  |        |:|  |       /::\  \       /::\  \       /::|  |       /::\  \       /::\  \   
-      /:|:|  |        |:|  |      /:/\:\  \     /:/\:\  \     /:|:|  |      /:/\:\  \     /:/\:\  \  
-     /:/|:|__|__      |:|__|__   /::\~\:\  \   /::\~\:\  \   /:/|:|  |__   /:/  \:\__\   /::\~\:\  \ 
+    <h2><pre>
+         ___           ___           ___           ___           ___           ___           ___
+        /\__\         |\__\         /\  \         /\  \         /\__\         /\  \         /\  \
+       /::|  |        |:|  |       /::\  \       /::\  \       /::|  |       /::\  \       /::\  \
+      /:|:|  |        |:|  |      /:/\:\  \     /:/\:\  \     /:|:|  |      /:/\:\  \     /:/\:\  \
+     /:/|:|__|__      |:|__|__   /::\~\:\  \   /::\~\:\  \   /:/|:|  |__   /:/  \:\__\   /::\~\:\  \
     /:/ |::::\__\     /::::\__\ /:/\:\ \:\__\ /:/\:\ \:\__\ /:/ |:| /\__\ /:/__/ \:|__| /:/\:\ \:\__\
     \/__/~~/:/  /    /:/~~/~    \/_|::\/:/  / \/__\:\/:/  / \/__|:|/:/  / \:\  \ /:/  / \/__\:\/:/  /
-          /:/  /    /:/  /         |:|::/  /       \::/  /      |:/:/  /   \:\  /:/  /       \::/  / 
-         /:/  /     \/__/          |:|\/__/        /:/  /       |::/  /     \:\/:/  /        /:/  /  
-        /:/  /                     |:|  |         /:/  /        /:/  /       \::/__/        /:/  /   
-        \/__/                       \|__|         \/__/         \/__/         ~~            \/__/           
-    
-    
-    </code></h2>
+          /:/  /    /:/  /         |:|::/  /       \::/  /      |:/:/  /   \:\  /:/  /       \::/  /
+         /:/  /     \/__/          |:|\/__/        /:/  /       |::/  /     \:\/:/  /        /:/  /
+        /:/  /                     |:|  |         /:/  /        /:/  /       \::/__/        /:/  /
+        \/__/                       \|__|         \/__/         \/__/         ~~            \/__/
+
+
+    </pre></h2>
  <p>je suis sur github</p></body>
 </html>
